changed overflow and z-index of #page to prevent drop down of content in #page and continue drop shadow

--- a/css/altres.css
+++ b/css/altres.css
@@ -40,7 +40,8 @@ body {
 
 #page {
 	position: relative;
-	/* z-index: -3; */
+	overflow: hidden;
+	z-index: -3;
 }
 
 #splash {
